k8s/04-backend-deployment.yaml
# 04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
    #   initContainers:
    #   - name: wait-for-mongodb
    #     image: busybox:1.36
    #     # Waits until the mongodb-service is reachable on port 27017
    #     command: ['sh', '-c', 'echo Waiting for DB...; until nc -z mongodb-service 27017; do echo sleeping; sleep 2; done; echo DB is ready.']
      containers:
        - name: backend
          image: deependrabhatta/mern-admin:backendv1
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
