k8s/backend-deployment.yaml
# 04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: deependrabhatta/mern-admin:backendv1
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
