k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: deependrabhatta/mern-admin:backendv1 # Uses the image you built locally
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: backend # The frontend Nginx will look for this hostname
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
