k8s/frontend-svc.yaml
# 07-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP # Ingress will provide external access
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
