k8s/mongodb-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongodb-service 
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
  clusterIP: None
